--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@types/format-duration": "^1.0.1",
     "@types/react-collapse": "^5.0.1",
+    "@types/react-expand-animated": "^1.0.0",
     "@types/styled-components": "^5.1.26",
     "format-duration": "^3.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
+    "react-expand-animated": "^1.0.2",
     "react-icons": "^4.7.1",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.4.5",
