--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "@types/react-expand-animated": "^1.0.0",
     "@types/styled-components": "^5.1.26",
     "format-duration": "^3.0.0",
+    "framer-motion": "^8.1.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-expand-animated": "^1.0.2",
     "react-icons": "^4.7.1",
+    "react-intersection-observer": "^9.4.1",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.4.5",
     "react-smooth-collapse": "^2.1.2",
+    "react-visibility-sensor": "^5.1.1",
     "simple-duration": "^1.1.0",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.5"
