--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.4.5",
     "react-smooth-collapse": "^2.1.2",
+    "react-type-animation": "^2.1.2",
     "react-visibility-sensor": "^5.1.1",
     "simple-duration": "^1.1.0",
     "styled-components": "^5.3.6",
