--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/styled-components": "^5.1.26",
     "format-duration": "^3.0.0",
     "framer-motion": "^8.1.7",
+    "number-with-commas": "^1.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-collapse": "^5.1.1",
