--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-visibility-sensor": "^5.1.1",
     "simple-duration": "^1.1.0",
     "styled-components": "^5.3.6",
-    "swiper": "^8.4.5"
+    "swiper": "^8.4.5",
+    "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
