--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "number-with-commas": "^1.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.3",
     "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-expand-animated": "^1.0.2",
